BUild 2.10.14 Added the MTB3 accelerometer reading
svn path=/trunk/iCub/firmware/; revision=29404

--- a/mtb3/SKIN/nbproject/Makefile-genesis.properties
+++ b/mtb3/SKIN/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Apr 11 13:41:14 CEST 2014
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLAB C30\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=0d2b1469ad71adb787c711a416386331
-default.languagetoolchain.version=3_30b
-default.com-microchip-mplab-nbide-toolchainC30-C30LanguageToolchain.md5=a008dc290e7e8dbad8ef0cd64d8807f8
+#Thu Jul 03 08:14:36 CEST 2014
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=7db8c3a567a37656e059f650e4507af9
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.20\\bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=0b040d5e5949b59f004c7912367437ce
+default.languagetoolchain.version=1.20
 host.platform=windows
 conf.ids=default
