prepared for a stm32f4 project
svn path=/trunk/iCub/firmware/; revision=29489

--- a/emBODY/eBtest/arch-arm/libs/lowlevel/hl-core-tests/test-it/core-stm32f1.uvprojx
+++ b/emBODY/eBtest/arch-arm/libs/lowlevel/hl-core-tests/test-it/core-stm32f1.uvprojx
@@ -159,7 +159,7 @@
             <CpuDllArguments></CpuDllArguments>
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile>.\stm32-cfg.ini</InitializationFile>
+            <InitializationFile>.\debugsetup-f1x.ini</InitializationFile>
             <Driver>BIN\ULP2CM3.DLL</Driver>
           </TargetDlls>
         </DebugOption>
@@ -829,7 +829,7 @@
             <CpuDllArguments></CpuDllArguments>
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile>.\stm32-cfg.ini</InitializationFile>
+            <InitializationFile>.\debugsetup-f1x.ini</InitializationFile>
             <Driver>BIN\ULP2CM3.DLL</Driver>
           </TargetDlls>
         </DebugOption>
@@ -1499,7 +1499,7 @@
             <CpuDllArguments></CpuDllArguments>
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile>.\stm32-cfg.ini</InitializationFile>
+            <InitializationFile>.\debugsetup-f1x.ini</InitializationFile>
             <Driver>BIN\ULP2CM3.DLL</Driver>
           </TargetDlls>
         </DebugOption>
